Genetic algorithm working